<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bluetooth Messenger</string>
    <string name="logo">launch screen logo</string>
    <string name="Welcome">Welcome to Bluetooth Messenger</string>
    <string name="createProfileButton">Create Profile</string>
    <string name="profile_unTextView">Username:</string>
    <string name="profile_picTextView">Profile Picture:</string>
    <string name="profile_picButton">Upload Picture</string>
    <string name="profile_emailTextView">E-mail:</string>
    <string name="profile_createButton">Create Profile</string>
    <string name="profile_pic">profile pic</string>
    <string name="launch_screenTextView">Bluetooth Messenger</string>
    <string name="refreshButton">Find Devices</string>
    <string name="message_userButton">user alias</string>
    <string name="sendButton">Send</string>
    <string name="send_my_profile">Send My Profile</string>
    <string name="view_profile_unTextView">Username</string>
    <string name="facebookButton">Facebook</string>
    <string name="alias">Alias</string>
    <string name="email">user@domain</string>
    <string name="myProfile">View My Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="makeDiscoverable">Make Me Discoverable</string>
    <string name="bt_not_enabled_leaving">Bluetooth is not enabled.  Leaving Bluetooth Messenger.</string>
    <string name="connect">Connect</string>
    <string name="discoverable">Make Discoverable</string>
    <string name="view_my_profile">View My Profile</string>
    <string name="close_connection">Close Current Connection</string>
    <string name="close_application">Exit</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select device to connect</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="new_devices">Discovered unpaired devices</string>

</resources>