<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00ffff"
    android:orientation="vertical" >

    <Button
        android:id="@+id/RefreshButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/refreshButton" />

    <ListView
        android:id="@+id/pairedDevicesListView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/paired_devices"
        android:layout_centerHorizontal="true" >
    </ListView>

    <ListView
        android:id="@+id/newDevicesListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/unpaired_devices"
        android:layout_centerHorizontal="true" >

    </ListView>

    <TextView
        android:id="@+id/paired_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RefreshButton"
        android:layout_centerHorizontal="true"
        android:text="@string/paired_devices"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/unpaired_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pairedDevicesListView"
        android:layout_centerHorizontal="true"
        android:text="@string/new_devices"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="15dp" />

</RelativeLayout>